Fix scoll increment for non-smooth scrolling (#46617)

Introduced in 2603ad69b997c999404ecc441e0d64ea2cc22018. Previously, the
delta was incremented by (actual delta/scroll dist), button clicks where
then sent while (delta-- >= 1).

After 2603ad69b997c999404ecc441e0d64ea2cc22018, the delta was incremented by
the delta only, scroll dist was used as increment in the smooth scrolling
information. On non-smooth-scrolling servers, the driver would now send
too many events. Restore the old behaviour by dividing by the scroll
distance before entering the button click loop.

X.Org Bug 46617 <http://bugs.freedesktop.org/show_bug.cgi?id=46617>

Tested-by: Peter Zotov <whitequark@whitequark.org>
Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>